@@ -1,3 +1,7 @@
+        * Handle input to log() correctly. Based on the implementation of
+          Sys::Syslog::syslog(), produces no ugly warnings, and makes sure that
+          printf stuff works nicely.
+
         * Root DSN may need the hostname as well, so pass it in rather than 
           leaving it out.
 
